Next codelab: layout basics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:theme="@style/Theme.ComposeSandbox"></activity>
+        <activity
+            android:name=".codelab.basiclayouts.MySootheMainActivity"
+            android:exported="true"
             android:theme="@style/Theme.ComposeSandbox">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
