--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,17 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ComposeSandbox"></activity>
-        <activity
-            android:name=".codelab.basiclayouts.MySootheMainActivity"
-            android:exported="true"
             android:theme="@style/Theme.ComposeSandbox">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".codelab.basiclayouts.MySootheMainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ComposeSandbox">
         </activity>
     </application>
 
