Added top app bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.ComposeSandbox"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".jetchat.JetChatMainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeSandbox">
@@ -25,10 +25,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ComposeSandbox"></activity>
+        <activity
             android:name=".codelab.basiclayouts.MySootheMainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ComposeSandbox">
-        </activity>
+            android:theme="@style/Theme.ComposeSandbox"></activity>
     </application>
 
 </manifest>
